--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
   "dependencies": {
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
-  }
+
+  },
+  {"build": "node --max_old_space_size=8192 <entry_file_path> --progress --env.<dev/prod>"
+  
+}
+  
+  
+  
 }
